--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -24,7 +24,7 @@
     <title>sainternet.xyz</title>
 
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
-    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
+    <meta name="keywords" content="dns, DNS, 'dns.sainternet.xyz', doh, DoH, dohttps, DoHTTPS, 'doh/3', 'DoH/3', 'dohttp/3', 'DoHTTP/3', dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, 'pokédex', 'Pokédex', saint, sainternet, saint-lascivious, 'sainternet.xyz'">
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
 
     <meta name="theme-color" content="#8BC34A">
@@ -230,17 +230,17 @@
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">DNS over HTTPS</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-https-only.mobileconfig" href="downloads/apple/sainternet-https-only.mobileconfig" id="httpsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--top" for="httpsmobileconfig">Download HTTPS .mobileconfig for Apple iOS/macOS.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--top" for="httpsmobileconfig">Download HTTPS .mobileconfig for Apple iOS/macOS.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">DNS over TLS</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-tls-only.mobileconfig" href="downloads/apple/sainternet-tls-only.mobileconfig" id="tlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--left" for="tlsmobileconfig">Download TLS .mobileconfig for Apple iOS/macOS.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--left" for="tlsmobileconfig">Download TLS .mobileconfig for Apple iOS/macOS.</a>
               </div>
               <div class="mdl-list__item" id="recommendeddnsprofile">
                 <span class="embiggen mdl-list__item-primary-content">DNS over HTTPS/TLS</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-https-and-tls.mobileconfig" href="downloads/apple/sainternet-https-and-tls.mobileconfig" id="httpstlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="httpstlsmobileconfig">Download HTTPS/TLS .mobileconfig for Apple iOS/macOS.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--bottom" for="httpstlsmobileconfig">Download HTTPS/TLS .mobileconfig for Apple iOS/macOS.</a>
               </div>
             </div>
             <p class="embiggen sainternet-subheader-centered" id="unfiltereddnsprofiles">
@@ -250,17 +250,17 @@
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">DNS over HTTPS</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-https-only-unfiltered.mobileconfig" href="downloads/apple/sainternet-https-only-unfiltered.mobileconfig" id="unfilteredhttpsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--top" for="unfilteredhttpsmobileconfig">Download unfiltered HTTPS .mobileconfig for Apple iOS/macOS.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--top" for="unfilteredhttpsmobileconfig">Download unfiltered HTTPS .mobileconfig for Apple iOS/macOS.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">DNS over TLS</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-tls-only-unfiltered.mobileconfig" href="downloads/apple/sainternet-tls-only-unfiltered.mobileconfig" id="unfilteredtlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--left" for="unfilteredtlsmobileconfig">Download unfiltered TLS .mobileconfig for Apple iOS/macOS.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--left" for="unfilteredtlsmobileconfig">Download unfiltered TLS .mobileconfig for Apple iOS/macOS.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">DNS over HTTPS/TLS</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-https-and-tls-unfiltered.mobileconfig" href="downloads/apple/sainternet-https-and-tls-unfiltered.mobileconfig" id="unfilteredhttpstlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="unfilteredhttpstlsmobileconfig">Download unfiltered HTTPS/TLS .mobileconfig for Apple iOS/macOS.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--bottom" for="unfilteredhttpstlsmobileconfig">Download unfiltered HTTPS/TLS .mobileconfig for Apple iOS/macOS.</a>
               </div>
             </div>
             <p>
@@ -326,7 +326,7 @@
       <div class="mdl-mini-footer--left-section">
         <ul class="mdl-mini-footer--link-list">
           <li>
-            <a href="mailto:saint@sainternet.xyz" aria-label="Email me at saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
+            <a href="mailto:saint@sainternet.xyz" aria-label="Email Button" target="_blank" rel="noopener noreferrer" id="icon-email">
               <icon class="enlift material-icons">email</icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-email">
@@ -334,7 +334,7 @@
             </a>
           </li>
           <li>
-            <a href="https://discord.gg/NC7taVyn" aria-label="Talk to me on Discord (probably not)" id="icon-discord">
+            <a href="https://discord.gg/NC7taVyn" aria-label="Discord Button" id="icon-discord">
               <icon class="enlift fa-brands fa-discord"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
@@ -342,7 +342,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/saint-lascivious" aria-label="Check out my GitHub" id="icon-github">
+            <a href="https://github.com/saint-lascivious" aria-label="GitHub Button" id="icon-github">
               <icon class="enlift fa-brands fa-github"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-github">
@@ -350,7 +350,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Occasionally I do things on Reddit" id="icon-reddit">
+            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Reddit Button" id="icon-reddit">
               <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
@@ -360,8 +360,8 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" aria-label="Go back to the Home page" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
-    <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
+    <a href="index.html" aria-label="Home Page" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="#" class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
   </body>
