--- a/.formatted/downloads.html
+++ b/.formatted/downloads.html
@@ -24,7 +24,7 @@
     <title>sainternet.xyz</title>
 
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
-    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
+    <meta name="keywords" content="dns, DNS, 'dns.sainternet.xyz', doh, DoH, dohttps, DoHTTPS, 'doh/3', 'DoH/3', 'dohttp/3', 'DoHTTP/3', dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, 'pokédex', 'Pokédex', saint, sainternet, saint-lascivious, 'sainternet.xyz'">
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
 
     <meta name="theme-color" content="#CDDC39">
@@ -174,32 +174,32 @@
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">blocklists.txt</span>
                 <a class="mdl-list__item-secondary-action" download="blocklists.txt" href="downloads/lists/blocklists.txt" id="blocklists"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="blocklists">Blocklists.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--bottom" for="blocklists">Blocklists.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">exact-blacklist.txt</span>
                 <a class="mdl-list__item-secondary-action" download="exact-blacklist.txt" href="downloads/lists/exact-blacklist.txt" id="exact-blacklist"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="exact-blacklist">Exact blacklist.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--bottom" for="exact-blacklist">Exact blacklist.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">exact-whitelist.txt</span>
                 <a class="mdl-list__item-secondary-action" download="exact-whitelist.txt" href="downloads/lists/exact-whitelist.txt" id="exact-whitelist"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="exact-whitelist">Exact whitelist.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--bottom" for="exact-whitelist">Exact whitelist.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">regex-blacklist.txt</span>
                 <a class="mdl-list__item-secondary-action" download="regex-blacklist.txt" href="downloads/lists/regex-blacklist.txt" id="regex-blacklist"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="regex-blacklist">Regex blacklist.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--bottom" for="regex-blacklist">Regex blacklist.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">tlds-with-abuse-potential.txt</span>
                 <a class="mdl-list__item-secondary-action" download="top-level-domains-with-abuse-potential.txt" href="downloads/lists/top-level-domains-with-abuse-potential.txt" id="tlds-with-abuse-potential"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="tlds-with-abuse-potential">TLDs with abuse potential.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--bottom" for="tlds-with-abuse-potential">TLDs with abuse potential.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">virtual-tlds-for-dns-server-interrogation.txt</span>
                 <a class="mdl-list__item-secondary-action" download="virtual-top-level-domains-for-dns-server-interrogation.txt" href="downloads/lists/virtual-top-level-domains-for-dns-server-interrogation.txt" id="virtual-tlds-for-dns-server-interrogation"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="virtual-tlds-for-dns-server-interrogation">Virtual TLDs for DNS server interrogation.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--bottom" for="virtual-tlds-for-dns-server-interrogation">Virtual TLDs for DNS server interrogation.</a>
               </div>
             </div>
             <p class="embiggen sainternet-subheader-centered">
@@ -209,17 +209,17 @@
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">sainternet-https-only.mobileconfig</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-https-only.mobileconfig" href="downloads/apple/sainternet-https-only.mobileconfig" id="httpsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--top" for="httpsmobileconfig">Download HTTPS .mobileconfig for Apple iOS/macOS.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--top" for="httpsmobileconfig">Download HTTPS .mobileconfig for Apple iOS/macOS.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">sainternet-tls-only.mobileconfig</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-tls-only.mobileconfig" href="downloads/apple/sainternet-tls-only.mobileconfig" id="tlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--left" for="tlsmobileconfig">Download TLS .mobileconfig for Apple iOS/macOS.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--left" for="tlsmobileconfig">Download TLS .mobileconfig for Apple iOS/macOS.</a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">sainternet-https-and-tls.mobileconfig</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-https-and-tls.mobileconfig" href="downloads/apple/sainternet-https-and-tls.mobileconfig" id="httpstlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="httpstlsmobileconfig">Download HTTPS/TLS .mobileconfig for Apple iOS/macOS.</a>
+                <a href="#" class="mdl-tooltip mdl-tooltip--bottom" for="httpstlsmobileconfig">Download HTTPS/TLS .mobileconfig for Apple iOS/macOS.</a>
               </div>
             </div>
           </div>
@@ -229,7 +229,7 @@
       <div class="mdl-mini-footer--left-section">
         <ul class="mdl-mini-footer--link-list">
           <li>
-            <a href="mailto:saint@sainternet.xyz" aria-label="Email me at saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
+            <a href="mailto:saint@sainternet.xyz" aria-label="Email Button" target="_blank" rel="noopener noreferrer" id="icon-email">
               <icon class="enlift material-icons">email</icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-email">
@@ -237,7 +237,7 @@
             </a>
           </li>
           <li>
-            <a href="https://discord.gg/NC7taVyn" aria-label="Talk to me on Discord (probably not)" id="icon-discord">
+            <a href="https://discord.gg/NC7taVyn" aria-label="Discord Button" id="icon-discord">
               <icon class="enlift fa-brands fa-discord"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
@@ -245,7 +245,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/saint-lascivious" aria-label="Check out my GitHub" id="icon-github">
+            <a href="https://github.com/saint-lascivious" aria-label="GitHub Button" id="icon-github">
               <icon class="enlift fa-brands fa-github"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-github">
@@ -253,7 +253,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Occasionally I do things on Reddit" id="icon-reddit">
+            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Reddit Button" id="icon-reddit">
               <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
@@ -263,8 +263,8 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" aria-label="Go back to the Home page" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
-    <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
+    <a href="index.html" aria-label="Home Page" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="#" class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
   </body>
