--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -24,7 +24,7 @@
     <title>sainternet.xyz</title>
 
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
-    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
+    <meta name="keywords" content="dns, DNS, 'dns.sainternet.xyz', doh, DoH, dohttps, DoHTTPS, 'doh/3', 'DoH/3', 'dohttp/3', 'DoHTTP/3', dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, 'pokédex', 'Pokédex', saint, sainternet, saint-lascivious, 'sainternet.xyz'">
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
 
     <meta name="theme-color" content="#F44336">
@@ -204,7 +204,7 @@
       <div class="mdl-mini-footer--left-section">
         <ul class="mdl-mini-footer--link-list">
           <li>
-            <a href="mailto:saint@sainternet.xyz" aria-label="Email me at saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
+            <a href="mailto:saint@sainternet.xyz" aria-label="Email Button" target="_blank" rel="noopener noreferrer" id="icon-email">
               <icon class="enlift material-icons">email</icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-email">
@@ -212,7 +212,7 @@
             </a>
           </li>
           <li>
-            <a href="https://discord.gg/NC7taVyn" aria-label="Talk to me on Discord (probably not)" id="icon-discord">
+            <a href="https://discord.gg/NC7taVyn" aria-label="Discord Button" id="icon-discord">
               <icon class="enlift fa-brands fa-discord"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
@@ -220,7 +220,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/saint-lascivious" aria-label="Check out my GitHub" id="icon-github">
+            <a href="https://github.com/saint-lascivious" aria-label="GitHub Button" id="icon-github">
               <icon class="enlift fa-brands fa-github"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-github">
@@ -228,7 +228,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Occasionally I do things on Reddit" id="icon-reddit">
+            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Reddit Button" id="icon-reddit">
               <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
