--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -24,7 +24,7 @@
     <title>sainternet.xyz</title>
 
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
-    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
+    <meta name="keywords" content="dns, DNS, 'dns.sainternet.xyz', doh, DoH, dohttps, DoHTTPS, 'doh/3', 'DoH/3', 'dohttp/3', 'DoHTTP/3', dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, 'pokédex', 'Pokédex', saint, sainternet, saint-lascivious, 'sainternet.xyz'">
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
 
     <meta name="theme-color" content="#FF9800">
@@ -235,19 +235,19 @@
                   <th>Protocol<br>Port</th>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttps">HTTPS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttps"><code>https://unfiltered.dns.sainternet.xyz/dns-query</code></a></td>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttps">HTTPS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttps"><code>https://unfiltered.dns.sainternet.xyz/dns-query</code></a></td>
                   <td>TCP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3">HTTP/3</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3"><code>h3://unfiltered.dns.sainternet.xyz/dns-query</code></a></td>
+                  <td><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3">HTTP/3</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3"><code>h3://unfiltered.dns.sainternet.xyz/dns-query</code></a></td>
                   <td>UDP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertls">TLS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertls"><code>tls://unfiltered.dns.sainternet.xyz:853</code></a></td>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertls">TLS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsovertls"><code>tls://unfiltered.dns.sainternet.xyz:853</code></a></td>
                   <td>TCP<br><code>853</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquic">QUIC</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverquic"><code>quic://unfiltered.dns.sainternet.xyz:853</code></a></td>
+                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquic">QUIC</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverquic"><code>quic://unfiltered.dns.sainternet.xyz:853</code></a></td>
                   <td>UDP<br><code>853</code></td>
                 </tr>
               </table>
@@ -691,7 +691,7 @@
       <div class="mdl-mini-footer--left-section">
         <ul class="mdl-mini-footer--link-list">
           <li>
-            <a href="mailto:saint@sainternet.xyz" aria-label="Email me at saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
+            <a href="mailto:saint@sainternet.xyz" aria-label="Email Button" target="_blank" rel="noopener noreferrer" id="icon-email">
               <icon class="enlift material-icons">email</icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-email">
@@ -699,7 +699,7 @@
             </a>
           </li>
           <li>
-            <a href="https://discord.gg/NC7taVyn" aria-label="Talk to me on Discord (probably not)" id="icon-discord">
+            <a href="https://discord.gg/NC7taVyn" aria-label="Discord Button" id="icon-discord">
               <icon class="enlift fa-brands fa-discord"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
@@ -707,7 +707,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/saint-lascivious" aria-label="Check out my GitHub" id="icon-github">
+            <a href="https://github.com/saint-lascivious" aria-label="GitHub Button" id="icon-github">
               <icon class="enlift fa-brands fa-github"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-github">
@@ -715,7 +715,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Occasionally I do things on Reddit" id="icon-reddit">
+            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Reddit Button" id="icon-reddit">
               <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
@@ -725,8 +725,8 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" aria-label="Go back to the Home page" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
-    <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
+    <a href="index.html" aria-label="Home Page" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="#" class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
   </body>
