--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -24,7 +24,7 @@
     <title>sainternet.xyz</title>
 
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
-    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
+    <meta name="keywords" content="dns, DNS, 'dns.sainternet.xyz', doh, DoH, dohttps, DoHTTPS, 'doh/3', 'DoH/3', 'dohttp/3', 'DoHTTP/3', dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, 'pokédex', 'Pokédex', saint, sainternet, saint-lascivious, 'sainternet.xyz'">
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
 
     <meta name="theme-color" content="#4CAF50">
@@ -202,19 +202,19 @@
                   <th>Protocol<br>Port</th>
                 </tr>
                 <tr>
-                  <td id="dnsoverhttps"><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttpslink">HTTPS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttpslink"><code>https://dns.sainternet.xyz/dns-query</code></a></td>
+                  <td id="dnsoverhttps"><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttpslink">HTTPS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttpslink"><code>https://dns.sainternet.xyz/dns-query</code></a></td>
                   <td>TCP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsoverhttp3"><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3link">HTTP/3</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3link"><code>h3://dns.sainternet.xyz/dns-query</code></a></td>
+                  <td id="dnsoverhttp3"><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3link">HTTP/3</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3link"><code>h3://dns.sainternet.xyz/dns-query</code></a></td>
                   <td>UDP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsovertls"><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertlslink">TLS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertlslink"><code>tls://dns.sainternet.xyz:853</code></a></td>
+                  <td id="dnsovertls"><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertlslink">TLS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsovertlslink"><code>tls://dns.sainternet.xyz:853</code></a></td>
                   <td>TCP<br><code>853</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsoverquic"><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquiclink">QUIC</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverquiclink"><code>quic://dns.sainternet.xyz:853</code></a></td>
+                  <td id="dnsoverquic"><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquiclink">QUIC</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverquiclink"><code>quic://dns.sainternet.xyz:853</code></a></td>
                   <td>UDP<br><code>853</code></td>
                 </tr>
               </table>
@@ -238,11 +238,11 @@
                   <th>Port</th>
                 </tr>
                 <tr>
-                  <td id="dnsovertcp"><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol" id="dnsovertcplink">TCP</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertcplink"><code>119.224.127.171</code><br><code id="alt-ipv6-1">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-1">::ffff:119.224.127.171</code></a></td>
+                  <td id="dnsovertcp"><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol" id="dnsovertcplink">TCP</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsovertcplink"><code>119.224.127.171</code><br><code id="alt-ipv6-1">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-1">::ffff:119.224.127.171</code></a></td>
                   <td><code>53</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsoverudp"><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol" id="dnsoverudplink">UDP</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverudplink"><code>119.224.127.171</code><br><code id="alt-ipv6-2">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-2">::ffff:119.224.127.171</code></a></td>
+                  <td id="dnsoverudp"><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol" id="dnsoverudplink">UDP</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverudplink"><code>119.224.127.171</code><br><code id="alt-ipv6-2">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-2">::ffff:119.224.127.171</code></a></td>
                   <td><code>53</code></td>
                 </tr>
               </table>
@@ -263,7 +263,7 @@
       <div class="mdl-mini-footer--left-section">
         <ul class="mdl-mini-footer--link-list">
           <li>
-            <a href="mailto:saint@sainternet.xyz" aria-label="Email me at saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
+            <a href="mailto:saint@sainternet.xyz" aria-label="Email Button" target="_blank" rel="noopener noreferrer" id="icon-email">
               <icon class="enlift material-icons">email</icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-email">
@@ -271,7 +271,7 @@
             </a>
           </li>
           <li>
-            <a href="https://discord.gg/NC7taVyn" aria-label="Talk to me on Discord (probably not)" id="icon-discord">
+            <a href="https://discord.gg/NC7taVyn" aria-label="Discord Button" id="icon-discord">
               <icon class="enlift fa-brands fa-discord"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
@@ -279,7 +279,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/saint-lascivious" aria-label="Check out my GitHub" id="icon-github">
+            <a href="https://github.com/saint-lascivious" aria-label="GitHub Button" id="icon-github">
               <icon class="enlift fa-brands fa-github"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-github">
@@ -287,7 +287,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Occasionally I do things on Reddit" id="icon-reddit">
+            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Reddit Button" id="icon-reddit">
               <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
             <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
@@ -297,8 +297,8 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" aria-label="Go back to the Home page" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
-    <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
+    <a href="index.html" aria-label="Home Page" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="#" class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
   </body>
